# SimplePlan

./: .gitignore  .pre-commit-config.yaml  CLAUDE_DESKTOP_SETUP.md  INITIAL_PROJECT_PLAN.md  LICENSE  MCP_INTEGRATION.md  MCP_USAGE_EXAMPLES.md  PACKAGING_GUIDE.md  PROJECT_PLAN_SUMMARY.md  README.md  claude_desktop_config.json  cursor_global_mcp_config.json  mcp_server_minimal.py  mcp_server_robust.py  mcp_server_standalone.py  project_plan.json  pyproject.toml  simpleplan-mcp.sh
.cursor/rules/: agentic-feature-planning.mdc  agentic-refactor.mdc  general-practices.mdc  python_best_practices.mdc
.github/workflows/: build-executables.yml  publish.yml  setup.md  test-builds.yml  test.yml
feature_plans/: comprehensive_project_plan.md  project_plan.json
src/: main.py
src/simpleplan/: __init__.py  cli.py  main.py  mcp_server.py  models.py  project_plan_io.py
tests/: test_main.py
