[tool.poetry]
name = "SimplePlan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
jsonschema = "^4.20.0"
rich = "^13.7.0"
pydantic = "^2.5.0"
jinja2 = "^3.1.0"
fastmcp = "^2.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
ruff = "^0.1.0"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"

[tool.poetry.scripts]
simpleplan = "src.main:main"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
# Relaxed for rapid development
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
